results/c9dbef5140cbcb98057d23d36184aa84/err_code.txt
  File "./pyfile.py", line 19
    runitem = MCMCWrapper({fitarraystring}, emcee, m,C, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, c9dbef5140cbcb98057d23d36184aa84, {modelStrings},   argslist = (x, 0.65, data)
                                                           ^
SyntaxError: invalid syntax
